# MCP-Server

./: .env.example  README.md  pyproject.toml  requirements.txt  server.py  server_agmarknet.py  server_soilhealth.py  test.py
agmarket_server/: Dockerfile  README.md  pyproject.toml  requirements.txt  server_agmarket.py  test_agmarket.py
soilhealth_server/: .env.example  Dockerfile  README.md  pyproject.toml
